# CLI

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  build.sh  compile.py  install.ps1  install.sh  requirements.txt  watchlist.txt
.github/workflows/: build.yml  buildActifacts.yml  prcheck.yml  publish.yml  release.yml  test.yml
src/: args.rs  ascii.rs  commands.rs  eve.ps1  eve.py  eve.sh  git.rs  gitcheck.rs  main.rs  reinstall.rs  rustwrap.yml  test.rs
src/cli/: reinstall.rs
