[package]
name = "eve"
version = "0.1.0"
edition = "2021"

[dependencies]
argh = "0.1.12"
console = "0.15.8"
dialoguer = "0.11.0"
dirs = "5.0.1"
env_logger = "0.11.1"
eyre = "0.6.12"
indicatif = "0.17.8"
insta = "1.34.0"
log = "0.4.20"
owo-colors = "4.0.0"
tabled = "0.15.0"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["macros"] }
tracing = "0.1.40"
tracing-tree = "0.3.0"


[scripts]
watch-help = "cargo watch -x 'run -- --help'"